security-ctrl/backend-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-service-v2
  labels:
    app: backend-service
    version: v2
spec:
  replicas: 1 #3
  selector:
    matchLabels:
      app: backend-service
      version: v2
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true" 
      labels:
        app: backend-service
        version: v2
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/mesh-training/back-end:2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  labels:
    app: backend-service
spec:
  selector:
    app: backend-service
  ports:
    - port: 80
      targetPort: 8080
      name: http
