security-ctrl/frontend-deployment-secure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  labels:
    app: frontend-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: frontend-service
        version: v1
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/mesh-training/front-end:1.0
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keystore-vol
              mountPath: "/app/certs"
            - name: app-config-vol
              mountPath: "/app/config"
      volumes: 
        - name: keystore-vol
          secret:
            secretName: "frontend-gw-certs"
        - name: app-config-vol
          configMap:
            name: frontend-gw-config
---
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  labels:
    app: frontend-service
spec:
  selector:
    app: frontend-service
  ports:
    - port: 443
      targetPort: 8443
      name: https
