security-ctrl/frontend-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - 'frontend-service.apps.cluster-4bdh4.4bdh4.sandbox104.opentlc.com'
