security-ctrl/frontend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
spec:
  hosts:
    - 'frontend-service.apps.cluster-4bdh4.4bdh4.sandbox104.opentlc.com'
  gateways:
    - frontend-gw
  http:
    - route:
      - destination:
          host: frontend-service
