security-ctrl/namespace-dr-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ns-dr-mtls
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL #SIMPLE MUTUAL DISABLE
